# music_science_demo

./: .gitignore  CMakeLists.txt  index.html  music_science_demo.js  music_science_demo.wasm
src/: AudioVisulizationQueue.hpp  main.cpp
